# Robotarm

Code/Examples/Boost_Serial/: boost_test.cpp  config.json  driver.hpp  joints.cpp  main
Code/Examples/input/: main  main.cpp
Code/Examples/wx-example/: gui.cpp  gui.hpp  main  main.cpp  main_frame.cpp  main_frame.hpp
Code/src/action_interface/: CMakeLists.txt  package.xml
Code/src/action_interface/action/: Position.action
Code/src/action_server_client/: CMakeLists.txt  package.xml
Code/src/action_server_client/include/action_server_client/: visibility_control.h
Code/src/action_server_client/src/: fibonacci_action_client.cpp  fibonacci_action_server.cpp
Code/src/driver/: CMakeLists.txt  package.xml
Code/src/driver/src/: driver_node.cpp
Code/src/interface/: CMakeLists.txt  package.xml
Code/src/robot_server_client/: CMakeLists.txt  package.xml
Code/src/robot_server_client/include/action_server_client/: visibility_control.h
Code/src/robot_server_client/include/serial_interface/: driver.cpp  driver.hpp  joints.hpp  main  postures.hpp  serial_port.cpp  serial_port.hpp
Code/src/robot_server_client/src/: robot_action_client.cpp  robot_action_server.cpp
Diagrams - Pictures/: Statemachine Gedrag.png.bak
Document/: Usecase diagram.asta  voorbeeld.asta
